might fix horizontal scroll

--- a/style/footer.scss
+++ b/style/footer.scss
@@ -4,7 +4,7 @@ footer{
     flex-direction: column;
     gap: 1rem;
     text-align: center;
-    padding: 2rem;
+    padding: 2rem 0 2rem 0;
     color: white;
     background-color: rgb(48, 48, 48);
     width: 100%;
